css/mainStyle.css
:root {
  font-family: Arial;
  -webkit-tap-highlight-color: transparent;
  scroll-behavior: smooth;
  --lightmain: #e5f1f7;
}

@font-face {
  src: url("../assets/fonts/ProductSans-Regular.ttf");
  font-family: "productsans";
  font-weight: normal;
  font-display: swap;
}

@font-face {
  src: url("../assets/fonts/Roboto-Medium.ttf");
  font-family: "Roboto-Medium";
  font-weight: normal;
  font-display: swap;
}

/* ---------- Body ---------- */
body {
  text-align: center;
  font-family: Arial;
  margin: 0px 0px 0px 0px;
  box-sizing: border-box;
}

hr {
  width: auto;
  margin-left: 1em;
  margin-right: 1em;
  border-radius: 14px;
}

/* ---------- Header ---------- */
div.header {
  width: auto;
  font-family: productsans;
  margin: 0px 0px 1em 0px;
  padding-top: 1em;
  padding-bottom: 1.5em;
  border: 2px hidden black;
  font-family: productsans;
  border-top: 0px;
  border-bottom-left-radius: 35px;
  border-bottom-right-radius: 35px;
}

img.headerlogo {
  margin-top: 0em;
  background-color: lightblue;
  border: 2px hidden black;
  border-radius: 50%;
}

/* ---------- Footer ---------- */
div.footer {
  padding-top: 5em;
  padding-bottom: 0.8em;
  font-size: 0.85em;
  width: 100%;
  text-align: center;
  font-family: productsans;
}

/* ---------- Cards ---------- */
div.twocolumncardholder {
  margin-top: 10px;
  display: inline-grid;
  grid-column-gap: 15px;
  grid-row-gap: 15px;
}

div.onecolumncardholder {
  margin-top: 10px;
  display: inline-grid;
  grid-column-gap: 15px;
  grid-row-gap: 15px;
  grid-template-columns: auto;
  width: auto;
}

div.threecolumncardholder {
  margin-top: 10px;
  display: inline-grid;
  grid-column-gap: 15px;
  grid-row-gap: 15px;
  grid-template-columns: auto;
  width: auto;
}

div.card {
  padding: 2.5em 2.5em 2.5em 2.5em;
  border: 2px hidden black;
  border-radius: 16px;
  box-sizing: border-box;
}

div.projectcard {
  padding: 0em 0em 2.5em 0em;
  border: 2px hidden black;
  border-radius: 16px;
  box-sizing: border-box;
}

div.cardsection {
  margin-top: 20px;
  border-width: 2px;
  border-style: solid;
  border-color: black;
  border-radius: 16px;
}

/* Desktop view */
@media (min-width: 500px) {
  div.twocolumncardholder {
    grid-template-columns: 1fr 1fr;
    max-width: 70vw;
    width: 85vw;
  }

  div.threecolumncardholder {
    grid-template-columns: 1fr 1fr 1fr;
    min-width: 0%;
    max-width: 100%;
    width: 85vw;
  }

  div.card {
    width: auto;
    height: auto;
  }
}

/* Mobile view */
@media (max-width: 500px) {
  div.twocolumncardholder {
    grid-template-columns: 100%;
    min-width: 95%;
    max-width: 100%;
  }

  div.card {
    margin: 0px 1em 0px 1em;
    width: 90vw;
    height: auto;
  }

  div.projectcard {
    margin: 0px 1em 0px 1em;
    width: 90vw;
    height: auto;
  }
}

h3.cardsectiontitle {
  margin-top: 0;
  border-radius: 14px;
  padding: 10px 0px 10px 0px;
}

img.cardicon {
  width: 5em;
  height: 5em;
  align-content: center;
}

img.cardlogo {
  width: 5em;
  height: 5em;
  align-content: center;
  border-radius: 50%;
  border: 2px solid black
}

/* ---------- Text ---------- */
p.header {
  margin-bottom: 0;
}

h1.headertitle {
  margin-top: 0.3em;
}

h1.divider {
  background-color: var(--lightmain);
  border-radius: 32px;
  padding: 1em;
  margin: 1em auto 1em auto;
  width: 65vw;
}

p.cardtext {
  text-align: left;
  line-height: 1.5em;
  margin-top: 0.3em;
  margin-left: 1em;
  margin-right: 1em;
  word-wrap: break-word;
}

p.description {
  font-size: 14px;
}

ol.cardtext {
  text-align: left;
  line-height: 1.5em;
  margin-top: 0.3em;
  margin-left: 0em;
  margin-right: 1em;
}

ul.cardtext {
  text-align: left;
  line-height: 1.5em;
  margin-top: 0.3em;
  margin-left: 0em;
  margin-right: 1em;
}

h4.cardtextheading {
  text-align: left;
  margin-bottom: 0.3em;
  margin-left: 1em;
  margin-right: 1em;
}

/* ---------- Buttons ---------- */
input[type=button] {
  text-align: center;
  border: 2px hidden black;
  border-radius: 15px;
  height: auto;
  width: auto;
  margin: 5px 1px 5px 1px;
  padding: 8px 15px 8px 15px;
  font-weight: normal;
  font-family: Roboto-Medium;
  cursor: pointer;
  transition: 0.2s;
}

input[type=button].uniformsize {
  width: 8em;
}

input[type=button].nav {
  display: none;
  margin: 0em auto 0em auto;
}

@media (max-width: 500px) {
  input[type=button].nav {
    display: block;
  }
}

/* ---------- Dividers ---------- */
hr.cardheader {
  width: 2.5em;
  margin: 10px auto 10px auto;
}

/* ---------- Links ---------- */
a:link {
  color: black;
  font-weight: bold;
  text-decoration: none;
}

a:visited {
  color: black;
  text-decoration: none;
}

a:hover {
  opacity: 0.8;
  text-decoration: underline;
}

a.button {
  overflow: hidden;
  width: auto;
  display: inline-block
}

a.noshow {
  font-weight: normal;
  text-decoration: none;
}

a:hover.noshow {
  opacity: 1.0;
}

/* ---------- Images ---------- */
img.cardheader {
  width: 100%;
  border-radius: 16px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

/*--------------- Light mode colors ---------------*/
@media (prefers-color-scheme: light) {

  /* Body */
  body {
    background: white;
  }

  hr {
    border: 1px solid black;
  }

  /* Header */
  div.header {
    background-color: var(--lightmain);
  }

  /* Cards */
  div.card {
    background-color: var(--lightmain);
  }

  div.projectcard {
    background-color: var(--lightmain);
  }

  h3.cardsectiontitle {
    background-color: #add;
    color: #0e2323;
  }

  div.cardsection {
    color: black;
  }

  /* Links */
  a:link {
    color: black;
  }

  a:visited {
    color: black;
  }

  /* Buttons */
  input[type=button] {
    background-color: #aacbdd;
  }

  input[type=button]:hover {
    background-color: #579abc;
    color: white;
    box-shadow: 0px 0px 3px lightgrey;
  }

  /* Text */
  em.code {
    background-color: white;
  }

  /* Dividers */
  hr.cardheader {
    border: 1px solid gray;
  }
}

  /*--------------- Dark mode colors ---------------*/
  @media (prefers-color-scheme: dark) {

    /* Body */
    body {
      background: #0f0f0f;
      color: white;
    }

    hr {
      border: 1px solid grey;
    }

    /* Header */
    div.header {
      background-color: #1f1f1f;
    }

    /* Cards */
    div.card {
      background-color: #222;
    }

    div.projectcard {
      background-color: #222;
    }

    h3.cardsectiontitle {
      background-color: #1c4646;
      color: #aadddd;
    }

    div.cardsection {
      color: lightgrey;
      background-color: #0f0f0f;
    }

    /* Links */
    a:link {
      color: white;
    }

    a:visited {
      color: white;
    }

    /* Buttons */
    input[type=button] {
      background-color: #1c4646;
      color: #aadddd;
    }

    input[type=button]:hover {
      background-color: white;
      color: black;
    }

    /* Text */
    em.code {
      color: black;
      background-color: grey;
    }

    /* Dividers */
    hr.cardheader {
      border: 1px solid lightgray;
    }
  }

